more algorithms implementation

--- a/webinterview/behaviour.html
+++ b/webinterview/behaviour.html
@@ -4,7 +4,9 @@ Be prepared for a lot of behavioral questions: "tell me a time when...."
 - you helped a peer
 - you had to deal with a tight deadline and couldn't deliver in time
 They want to know what you would have done differently and what you learned.
-These are really important, try to come up with different examples every time and to be prepared because these questions are probably more difficult than the technical ones and after 4 hours it's hard to answer at your best.  
+These are really important, try to come up with different examples every time and to be prepared 
+because these questions are probably more difficult than the technical ones and after 4 hours 
+it's hard to answer at your best.  
 
 
 How would you build a sharable form validation component ? Show the HTML and JS.
@@ -13,7 +15,13 @@ How would you implement document.querySelectorAll manually using recursion?
 
 Was asked to do make a pyramid of an array of numbers using for loops.
 
-Given a JSON object, build a page of items from that JSON that meets specific design parameters (4 items per row, color of title, border, margins, padding all according to spec). The spec was ugly, IMO, but whatever... I was given the design specs and was not interviewing as a designer, but as a developer. Requirements included fading images in/out on mouseover, delete an item from the list, undo a deletion, etc. Additional features included sprite display from an Amazon-provided spritesheet for showing the number of stars on reviews
+Given a JSON object, build a page of items from that JSON that meets specific design parameters 
+(4 items per row, color of title, border, margins, padding all according to spec). 
+The spec was ugly, IMO, but whatever... I was given the design specs and was not interviewing 
+as a designer, but as a developer. Requirements included fading images in/out on mouseover, 
+delete an item from the list, undo a deletion, etc.
+Additional features included sprite display from an Amazon-provided spritesheet 
+for showing the number of stars on reviews
 
 Describe the box model. Create a drop down menu using jQuery.  
 
@@ -58,7 +66,8 @@ https://www.linkedin.com/pulse/preparing-front-end-web-development-interview-201
 
 https://github.com/h5bp/Front-end-Developer-Interview-Questions
 
-1. CSS Box Model 2. display: none vs hidden 3. property of position 4. this 的用法 5. closure 6. How to create element and how to add them in DOM
+1. CSS Box Model 2. display: none vs hidden 3. property of position 4. this 的用法 5. closure 
+6. How to create element and how to add them in DOM
 
 第一题，写一个1 X 4 的grid。border 1px. 占满浏览器宽度。每个cell 占25%。当浏览器宽度小于720px 时变成 2 X 2的grid。当宽度小于360px时变成4 X 1的grid. 
 第二题，写一个app。实现如下功能 add notes，edit notes，delete notes。要求notes显示在带颜色的矩形框内，并且颜色有限且可选。
@@ -80,10 +89,14 @@ http://www.ruanyifeng.com/blog/2015/07/flex-examples.html
 has a few big advantages over JSON-P as well:
 
 It supports HTTP verbs other than GET
-Error handling with JSON-P is tricky or impossible. CORS has access to the HTTP status and the response body just like XHR does
+Error handling with JSON-P is tricky or impossible. 
+CORS has access to the HTTP status and the response body just like XHR does
 CORS supports many types of authorization (like Basic Auth or OAuth). JSON-P only supports cookies
 
-The JSONP approach is a workaround that consists of calling an external API  with a DOM <script>  tag. The <script> tag is allowed to load content from any domains without security restrictions. The targeted API needs to expose a HTTP GET endpoint and return Javascript code instead of the regular JSON data. You can use this jQuery code to dynamically call a JSONP URL:
+The JSONP approach is a workaround that consists of calling an external API  with a DOM <script>  tag. 
+The <script> tag is allowed to load content from any domains without security restrictions. 
+The targeted API needs to expose a HTTP GET endpoint and return Javascript code instead of the regular JSON data. 
+You can use this jQuery code to dynamically call a JSONP URL:
 
 In order to retrieve the API answer from the newly included JavaScript code, jQuery automatically appends a callback argument to your URL (for example &callback=method12 ) which must be called by the JavaScript code that your API generates.
 
@@ -120,12 +133,21 @@ Can't meet deadline
 Could done better
 Significant improvmenet ever
 
-I once disagreed with my boss over how to best help a customer. Rather than question his authority in front of everyone, I talked to him off of the floor. I was open and honest about the problems I had with the way he wanted to do things. It turned out that there was just a simple misunderstanding. That disagreement we had showed me the importance of communicating with my coworkers to make sure that something obsolete doesn’t become a bigger problem than it needs to be.
+I once disagreed with my boss over how to best help a customer. 
+Rather than question his authority in front of everyone, I talked to him off of the floor. 
+I was open and honest about the problems I had with the way he wanted to do things. 
+It turned out that there was just a simple misunderstanding. 
+That disagreement we had showed me the importance of communicating with my coworkers to make sure 
+that something obsolete doesn’t become a bigger problem than it needs to be.
 
-Remember that hiring managers are looking for someone that will fit in at their company. Try and answer in a way that will show your better qualities.
+Remember that hiring managers are looking for someone that will fit in at their company. 
+Try and answer in a way that will show your better qualities.
 
-'Conflicting deadlines are a normal occupational hazard. I resolve the conflict by using the time frames as the reference, and scheduling for completion according to needs. I schedule within the deadlines, so I work ahead of them.
-I break the jobs into schedules, and complete each job systematically, so I stay organized, and on time. It's an effective method of dealing with conflicting deadlines.
+'Conflicting deadlines are a normal occupational hazard. 
+I resolve the conflict by using the time frames as the reference, and scheduling for completion according to needs.
+I schedule within the deadlines, so I work ahead of them.
+I break the jobs into schedules, and complete each job systematically, so I stay organized, and on time. 
+It's an effective method of dealing with conflicting deadlines.
 In some cases, the deadlines can't be resolved like this. In those cases I ask for guidance from management.'
 
 (2) why amazon/why AWS.
