--- a/webinterview/flexbox.html
+++ b/webinterview/flexbox.html
@@ -139,6 +139,13 @@ section {
 .column {
   margin: 10px;
 }
+body {
+    display:flex;
+    justify-content: space-between
+}
+body > div {
+    background-color: aqua
+}
     </style>
 </head>
 
@@ -192,14 +199,14 @@ section {
         </div>
     </div-->
 
-    <section>
-  <div class="column">First</div>
-  <div class="column">Second</div>
-  <div class="column">Third</div>
-</section>
 
 </body>
-
+<body>
+    <div>a</div>
+    <div>b</div>
+    <div>c</div>
+    <div>d</div>
+</body>
 </body>
 
 </html>
